--- a/index.html
+++ b/index.html
@@ -8,14 +8,36 @@
 <body>
 
 <div class="gallery">
-  <img src="art1.jpg" class="art active">
-  <img src="art2.jpg" class="art">
-  <img src="art3.jpg" class="art">
+
+  <div class="artwork active">
+    <img src="art1.jpg">
+    <div class="info">
+      <h2>작품 제목 1</h2>
+      <p>작가 이름 · 2024</p>
+    </div>
+  </div>
+
+  <div class="artwork">
+    <img src="art2.jpg">
+    <div class="info">
+      <h2>작품 제목 2</h2>
+      <p>작가 이름 · 2023</p>
+    </div>
+  </div>
+
+  <div class="artwork">
+    <img src="art3.jpg">
+    <div class="info">
+      <h2>작품 제목 3</h2>
+      <p>작가 이름 · 2022</p>
+    </div>
+  </div>
+
 </div>
 
 <script>
 let current = 0;
-const artworks = document.querySelectorAll('.art');
+const artworks = document.querySelectorAll('.artwork');
 
 window.addEventListener('wheel', () => {
   artworks[current].classList.remove('active');
@@ -26,5 +48,6 @@ window.addEventListener('wheel', () => {
 
 </body>
 </html>
+
 
 
