--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="art1.jpg">
     <div class="info">
       <h2>작품 제목 1</h2>
-      <p>작가 이름 · 2024</p>
+      <p>천애정 · 2024</p>
     </div>
   </div>
 
@@ -21,7 +21,7 @@
     <img src="art2.jpg">
     <div class="info">
       <h2>작품 제목 2</h2>
-      <p>작가 이름 · 2023</p>
+      <p>천애정 · 2023</p>
     </div>
   </div>
 
@@ -29,7 +29,7 @@
     <img src="art3.jpg">
     <div class="info">
       <h2>작품 제목 3</h2>
-      <p>작가 이름 · 2022</p>
+      <p>천애정 · 2022</p>
     </div>
   </div>
 
@@ -48,6 +48,7 @@ window.addEventListener('wheel', () => {
 
 </body>
 </html>
+
 
 
 
