--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <div class="gallery">
 
   <div class="artwork active">
-    <img src="art1.jpg">
+    <a href="art1.html">
+      <img src="art1.jpg">
+    </a>
     <div class="info">
       <h2>작품 제목 1</h2>
       <p>천애정 · 2024</p>
@@ -18,7 +20,9 @@
   </div>
 
   <div class="artwork">
-    <img src="art2.jpg">
+    <a href="art2.html">
+      <img src="art2.jpg">
+    </a>
     <div class="info">
       <h2>작품 제목 2</h2>
       <p>천애정 · 2023</p>
@@ -26,7 +30,9 @@
   </div>
 
   <div class="artwork">
-    <img src="art3.jpg">
+    <a gref="art3.html">
+      <img src="art3.jpg">
+    </a>
     <div class="info">
       <h2>작품 제목 3</h2>
       <p>천애정 · 2022</p>
@@ -48,6 +54,7 @@ window.addEventListener('wheel', () => {
 
 </body>
 </html>
+
 
 
 
