--- a/art1.html
+++ b/art1.html
@@ -14,11 +14,11 @@
 
   <div class="meta">
     <h1>작품 제목 1</h1>
-    <p class="sub">작가 이름 · 2024 · Oil on canvas · 100×80cm</p>
+    <p class="sub">천애정 · 2024 · Oil on canvas · 100×80cm</p>
 
     <h3>설명</h3>
     <p>
-      여기에 작품 설명을 적어줘. (작품 의도, 제작 배경, 재료, 전시 문맥 등)
+      여기에 작품 설명 (작품 의도, 제작 배경, 재료, 전시 문맥 등)
     </p>
 
     <h3>추가 정보</h3>
