--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
 
   <div class="artwork">
-    <a gref="art3.html">
+    <a href="art3.html">
       <img src="art3.jpg">
     </a>
     <div class="info">
@@ -54,6 +54,7 @@ window.addEventListener('wheel', () => {
 
 </body>
 </html>
+
 
 
 
