--- a/art3.html
+++ b/art3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<a class="back" href="index.html">← 전시로 돌아가기</a>
+<a class="back" href="index.html#3">← 전시로 돌아가기</a>
 
 <div class="wrap">
   <img class="main" src="art3.jpg" alt="작품 제목 1">
