--- a/index.html
+++ b/index.html
@@ -47,16 +47,15 @@
     : document.querySelectorAll('.art');
 
   let current = 0;
+  let isScrolling = false; // 휠 과도 입력 방지
 
   function activate(index) {
-    if (!slides.length) return;
     slides[current].classList.remove('active');
     current = (index + slides.length) % slides.length;
     slides[current].classList.add('active');
   }
 
   function activateFromHash() {
-    if (!slides.length) return;
     const n = parseInt(location.hash.replace('#', ''), 10);
     if (!isNaN(n) && n >= 1 && n <= slides.length) {
       slides.forEach(s => s.classList.remove('active'));
@@ -65,18 +64,32 @@
     }
   }
 
+  // 처음 로드될 때 해시 반영
   activateFromHash();
-
   window.addEventListener('hashchange', activateFromHash);
 
-  window.addEventListener('wheel', () => {
-    activate(current + 1);
-  });
+  // 휠 방향에 따라 이전/다음
+  window.addEventListener('wheel', (e) => {
+    if (isScrolling) return;
+
+    if (e.deltaY > 0) {
+      // 휠 내림 → 다음 작품
+      activate(current + 1);
+    } else if (e.deltaY < 0) {
+      // 휠 올림 → 이전 작품
+      activate(current - 1);
+    }
+
+    isScrolling = true;
+    setTimeout(() => isScrolling = false, 700); // 전환 속도랑 맞추기
+  }, { passive: true });
 </script>
+
 
 
 </body>
 </html>
+
 
 
 
