--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
 
 <div class="gallery">
+  
+  <div class="counter" id="counter">01 / 03</div>
 
   <div class="artwork active">
     <a href="art1.html">
@@ -89,6 +91,7 @@
 
 </body>
 </html>
+
 
 
 
