--- a/index.html
+++ b/index.html
@@ -44,22 +44,27 @@
 </div>
 
 <script>
+document.addEventListener('DOMContentLoaded', () => {
   const slides = document.querySelectorAll('.artwork').length
     ? document.querySelectorAll('.artwork')
     : document.querySelectorAll('.art');
 
   const counter = document.getElementById('counter');
+
+  if (!slides.length) {
+    console.log('슬라이드가 0개예요. .artwork 또는 .art 클래스 확인!');
+    return;
+  }
+
   let current = 0;
   let isScrolling = false;
 
   function updateCounter() {
+    if (!counter) return; // counter 없어도 작품 넘김은 되게
     const currentNum = String(current + 1).padStart(2, '0');
     const totalNum = String(slides.length).padStart(2, '0');
     counter.textContent = `${currentNum} / ${totalNum}`;
   }
-
-  let current = 0;
-  let isScrolling = false; // 휠 과도 입력 방지
 
   function activate(index) {
     slides[current].classList.remove('active');
@@ -74,36 +79,32 @@
       slides.forEach(s => s.classList.remove('active'));
       current = n - 1;
       slides[current].classList.add('active');
+      updateCounter();
+    } else {
+      updateCounter();
     }
   }
 
-  // 처음 로드될 때 해시 반영
   activateFromHash();
   window.addEventListener('hashchange', activateFromHash);
 
-  // 휠 방향에 따라 이전/다음
   window.addEventListener('wheel', (e) => {
     if (isScrolling) return;
 
-    if (e.deltaY > 0) {
-      // 휠 내림 → 다음 작품
-      activate(current + 1);
-    } else if (e.deltaY < 0) {
-      // 휠 올림 → 이전 작품
-      activate(current - 1);
-    }
+    if (e.deltaY > 0) activate(current + 1); // 다음
+    else if (e.deltaY < 0) activate(current - 1); // 이전
 
     isScrolling = true;
-    setTimeout(() => isScrolling = false, 420); // 전환 속도랑 맞추기
+    setTimeout(() => isScrolling = false, 420);
   }, { passive: true });
-  
-  updateCounter();
+});
 </script>
 
 
 
 </body>
 </html>
+
 
 
 
