--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@ document.addEventListener('DOMContentLoaded', () => {
     } else {
       updateCounter();
     }
+
+    isScrolling = false; // 전시로 돌아왔을 때 상태 리셋
   }
 
   activateFromHash();
@@ -104,6 +106,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
