--- a/index.html
+++ b/index.html
@@ -103,9 +103,15 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 
 
-
+<script>
+  document.addEventListener('contextmenu', function(e) {
+    e.preventDefault();
+  });
+</script>
+  
 </body>
 </html>
+
 
 
 
