--- a/art1.html
+++ b/art1.html
@@ -21,6 +21,12 @@
       여기에 작품 설명 (작품 의도, 제작 배경, 재료, 전시 문맥 등)
     </p>
 
+    <p class="copyright">
+    © Hong Gildong, 2023.  
+    Image courtesy of the artist.
+  </p>
+</div>
+
     <h3>추가 정보</h3>
     <ul>
       <li>소장: 개인</li>
