--- a/art2.html
+++ b/art2.html
@@ -29,5 +29,10 @@
   </div>
 </div>
 
+<p class="copyright">
+    © Hong Gildong, 2023.  
+    Image courtesy of the artist.
+</p>
+
 </body>
 </html>
