--- a/art2.html
+++ b/art2.html
@@ -30,7 +30,7 @@
 </div>
 
 <p class="copyright">
-    © Hong Gildong, 2023.  
+    © Cheon Aejeong, 2023.  
     Image courtesy of the artist.
 </p>
 
