--- a/art4.html
+++ b/art4.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>작품 제목 4</title>
+  <title>思惟</title>
   <link rel="stylesheet" href="detail.css">
 </head>
 <body>
@@ -10,11 +10,11 @@
 <a class="back" href="index.html#4">← 전시로 돌아가기</a>
 
 <div class="wrap">
-  <img class="main" src="art4.jpg" alt="작품 제목 4">
+  <img class="main" src="art4.jpg" alt="思惟">
 
   <div class="meta">
-    <h1>작품 제목 4</h1>
-    <p class="sub">천애정 · 2024 · Oil on canvas · 100×80cm</p>
+    <h1>思惟</h1>
+    <p class="sub">천애정 · 2024 · Acrylic on plywood · 53x40.5cm</p>
 
     <h3>설명</h3>
     <p>
