--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
     </div>
   </div>
 
+  <div class="artwork">
+    <a href="art4.html">
+      <img src="art4.jpg">
+    </a>
+    <div class="info">
+      <h2>思惟</h2>
+      <p>천애정 · 2024</p>
+    </div>
+  </div>
+
 </div>
 
 <script>
@@ -111,6 +121,7 @@ document.addEventListener('DOMContentLoaded', () => {
   
 </body>
 </html>
+
 
 
 
