--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div class="gallery">
   
-  <div class="counter" id="counter">01 / 03</div>
+  <div class="counter" id="counter"></div>
 
   <div class="artwork active">
     <a href="art1.html">
@@ -121,6 +121,7 @@ document.addEventListener('DOMContentLoaded', () => {
   
 </body>
 </html>
+
 
 
 
