--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
     </div>
   </div>
 
+  <div class="artwork">
+    <a href="art5.html">
+      <img src="art5.jpg">
+    </a>
+    <div class="info">
+      <h2>思惟</h2>
+      <p>천애정 · 2024</p>
+    </div>
+  </div>
+
 </div>
 
 <script>
@@ -121,6 +131,7 @@ document.addEventListener('DOMContentLoaded', () => {
   
 </body>
 </html>
+
 
 
 
