--- a/index.html
+++ b/index.html
@@ -61,6 +61,56 @@
     </div>
   </div>
 
+  <div class="artwork">
+    <a href="art6.html">
+      <img src="art6.jpg">
+    </a>
+    <div class="info">
+      <h2>작품 제목 3</h2>
+      <p>천애정 · 2022</p>
+    </div>
+  </div>
+
+  <div class="artwork">
+    <a href="art7.html">
+      <img src="art7.jpg">
+    </a>
+    <div class="info">
+      <h2>작품 제목 3</h2>
+      <p>천애정 · 2022</p>
+    </div>
+  </div>
+
+  <div class="artwork">
+    <a href="art8.html">
+      <img src="art8.jpg">
+    </a>
+    <div class="info">
+      <h2>작품 제목 3</h2>
+      <p>천애정 · 2022</p>
+    </div>
+  </div>
+
+  <div class="artwork">
+    <a href="art9.html">
+      <img src="art9.jpg">
+    </a>
+    <div class="info">
+      <h2>작품 제목 3</h2>
+      <p>천애정 · 2022</p>
+    </div>
+  </div>
+
+  <div class="artwork">
+    <a href="art10.html">
+      <img src="art10.jpg">
+    </a>
+    <div class="info">
+      <h2>작품 제목 3</h2>
+      <p>천애정 · 2022</p>
+    </div>
+  </div>
+
 </div>
 
 <script>
@@ -131,6 +181,7 @@ document.addEventListener('DOMContentLoaded', () => {
   
 </body>
 </html>
+
 
 
 
