--- a/index.html
+++ b/index.html
@@ -111,6 +111,56 @@
     </div>
   </div>
 
+  <div class="artwork">
+    <a href="art11.html">
+      <img src="art11.jpg">
+    </a>
+    <div class="info">
+      <h2>작품 제목 3</h2>
+      <p>천애정 · 2022</p>
+    </div>
+  </div>
+
+  <div class="artwork">
+    <a href="art12.html">
+      <img src="art12.jpg">
+    </a>
+    <div class="info">
+      <h2>작품 제목 3</h2>
+      <p>천애정 · 2022</p>
+    </div>
+  </div>
+
+  <div class="artwork">
+    <a href="art13.html">
+      <img src="art13.jpg">
+    </a>
+    <div class="info">
+      <h2>작품 제목 3</h2>
+      <p>천애정 · 2022</p>
+    </div>
+  </div>
+
+  <div class="artwork">
+    <a href="art14.html">
+      <img src="art14.jpg">
+    </a>
+    <div class="info">
+      <h2>작품 제목 3</h2>
+      <p>천애정 · 2022</p>
+    </div>
+  </div>
+
+  <div class="artwork">
+    <a href="art15.html">
+      <img src="art15.jpg">
+    </a>
+    <div class="info">
+      <h2>작품 제목 3</h2>
+      <p>천애정 · 2022</p>
+    </div>
+  </div>
+
 </div>
 
 <script>
@@ -181,6 +231,7 @@ document.addEventListener('DOMContentLoaded', () => {
   
 </body>
 </html>
+
 
 
 
