--- a/art13.html
+++ b/art13.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>작품 제목 1</title>
+  <title>Reflection</title>
   <link rel="stylesheet" href="detail.css">
 </head>
 <body>
@@ -10,10 +10,10 @@
 <a class="back" href="index.html#13">← 전시로 돌아가기</a>
 
 <div class="wrap">
-  <img class="main" src="art13.jpg" alt="작품 제목 1">
+  <img class="main" src="art13.jpg" alt="Reflection">
 
   <div class="meta">
-    <h1>작품 제목 1</h1>
+    <h1>Reflection</h1>
     <p class="sub">천애정 · 2024 · Oil on canvas · 100×80cm</p>
 
     <h3>설명</h3>
