--- a/art6.html
+++ b/art6.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<a class="back" href="index.html#6">← 전시로 돌아가기</a>
+<a class="back" href="exhibition.html#6">← 전시로 돌아가기</a>
 
 <div class="wrap">
   <img class="main" src="art6.jpg" alt="思惟">
