--- a/art7.html
+++ b/art7.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<a class="back" href="index.html#7">← 전시로 돌아가기</a>
+<a class="back" href="exhibition.html#7">← 전시로 돌아가기</a>
 
 <div class="wrap">
   <img class="main" src="art7.jpg" alt="思惟">
