--- a/art15.html
+++ b/art15.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<a class="back" href="index.html#15">← 전시로 돌아가기</a>
+<a class="back" href="exhibition.html#15">← 전시로 돌아가기</a>
 
 <div class="wrap">
   <img class="main" src="art15.jpg" alt="Reflection">
