--- a/index.html
+++ b/index.html
@@ -1,133 +1,119 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Online Archive</title>
-
-  <!-- (선택) 검색 노출 줄이기 -->
-  <meta name="robots" content="noindex, nofollow" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Archive</title>
+  <meta name="robots" content="noindex, nofollow">
 
   <style>
-    body{
-      margin:0;
-      background:#0b0b0b;
-      color:#fff;
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans KR", sans-serif;
-    }
+    * { box-sizing: border-box; }
 
-    .wrap{
-      min-height: 100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding: 40px 20px;
-    }
-
-    .card{
-      width: min(720px, 100%);
-      border: 1px solid rgba(255,255,255,0.12);
-      border-radius: 18px;
-      padding: 28px;
-      background: rgba(255,255,255,0.03);
-    }
-
-    h1{
-      margin: 0 0 10px;
-      font-size: 28px;
-      font-weight: 600;
+    body {
+      margin: 0;
+      background: #0f0f10;
+      color: #f2f2f2;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+                   "Noto Sans KR", sans-serif;
       letter-spacing: 0.2px;
     }
 
-    .desc{
-      margin: 0 0 18px;
-      opacity: 0.78;
-      line-height: 1.7;
-      font-size: 14px;
+    .container {
+      min-height: 100vh;
+      padding: 48px 32px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
 
-    .now{
-      margin-top: 18px;
-      padding: 14px 16px;
-      border-radius: 14px;
-      background: rgba(255,255,255,0.04);
-      border: 1px solid rgba(255,255,255,0.10);
-    }
-
-    .now .label{
+    .top {
       font-size: 12px;
-      opacity: 0.7;
-      letter-spacing: 1px;
-      text-transform: uppercase;
+      opacity: 0.5;
     }
 
-    .now .artist{
+    .center {
+      max-width: 640px;
+    }
+
+    h1 {
+      font-size: 32px;
+      font-weight: 500;
+      margin: 0 0 16px;
+    }
+
+    .desc {
+      font-size: 14px;
+      line-height: 1.7;
+      opacity: 0.75;
+      max-width: 520px;
+    }
+
+    .now {
+      margin-top: 40px;
+      font-size: 13px;
+      opacity: 0.8;
+    }
+
+    .now span {
+      display: block;
       margin-top: 6px;
       font-size: 18px;
-      font-weight: 600;
+      opacity: 1;
     }
 
-    .actions{
-      display:flex;
-      gap: 10px;
-      flex-wrap: wrap;
-      margin-top: 18px;
+    .bottom {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 12px;
+      opacity: 0.45;
     }
 
-    .btn{
-      display:inline-block;
-      padding: 12px 16px;
-      border-radius: 12px;
-      text-decoration:none;
-      color:#fff;
-      border: 1px solid rgba(255,255,255,0.16);
-      background: rgba(255,255,255,0.06);
-      opacity: 0.95;
-    }
-    .btn:hover{ opacity:1; }
-
-    .btn.primary{
-      border-color: rgba(255,255,255,0.28);
-      background: rgba(255,255,255,0.10);
+    .enter {
+      text-decoration: none;
+      color: #f2f2f2;
+      border-bottom: 1px solid rgba(255,255,255,0.4);
+      padding-bottom: 4px;
+      transition: opacity .3s;
     }
 
-    .footer{
-      margin-top: 18px;
-      font-size: 11px;
-      opacity: 0.5;
-      line-height: 1.6;
+    .enter:hover {
+      opacity: 0.7;
     }
   </style>
 </head>
+
 <body>
+  <div class="container">
 
-  <div class="wrap">
-    <div class="card">
+    <div class="top">
+      Online Exhibition / Archive
+    </div>
 
-      <h1>Online Archive</h1>
+    <div class="center">
+      <h1>Selected Works</h1>
+
       <p class="desc">
-        동시대 작가의 작업을 전시/기록하기 위한 비상업적 온라인 아카이브입니다.
-        작품 이미지는 작가의 제공 및 허락 하에 게시됩니다.
+        본 웹사이트는 작가의 작업을 전시·기록하기 위한 비상업적 온라인 아카이브입니다.
+        모든 이미지는 작가의 동의 하에 게시되었습니다.
       </p>
 
       <div class="now">
-        <div class="label">Now Showing</div>
-        <div class="artist">천애정 (Cheon Aejeong)</div>
+        Now Showing
+        <span>천애정</span>
       </div>
-
-      <div class="actions">
-        <a class="btn primary" href="exhibition.html">전시 입장하기 →</a>
-        <!-- 필요하면 about.html 만들어서 연결 -->
-        <!-- <a class="btn" href="about.html">About</a> -->
-      </div>
-
-      <div class="footer">
-        © The artists. All rights reserved. Images used with permission.<br/>
-        This site is for exhibition/archive purposes only.
-      </div>
-
     </div>
-  </div>
 
+    <div class="bottom">
+      <div>
+        © The artist. Images used with permission.
+      </div>
+
+      <a class="enter" href="exhibition.html">
+        Enter Exhibition →
+      </a>
+    </div>
+
+  </div>
 </body>
 </html>
