--- a/index.html
+++ b/index.html
@@ -110,16 +110,22 @@
         작품 이미지는 작가의 제공 및 허락 하에 게시됩니다.
       </p>
 
-      <div class="now">
-        <div class="label">Now Showing</div>
+      <div class="shows">
+
+      <div class="show">
+        <div class="label">NOW SHOWING</div>
         <div class="artist">천애정 (Cheon Aejeong)</div>
+        <a class="btn primary" href="exhibition-cheon.html">전시 입장하기 →</a>
       </div>
 
-      <div class="actions">
-        <a class="btn primary" href="exhibition.html">전시 입장하기 →</a>
-        <!-- 필요하면 about.html 만들어서 연결 -->
-        <!-- <a class="btn" href="about.html">About</a> -->
+      <div class="show">
+        <div class="label">NOW SHOWING</div>
+        <div class="artist">김민지 (Kim Minji)</div>
+        <a class="btn" href="exhibition-kim.html">전시 입장하기 →</a>
       </div>
+
+    </div>
+
 
       <div class="footer">
         © The artists. All rights reserved. Images used with permission.<br/>
