--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>
 
     <div class="actions">
-      <a class="btn primary" href="exhibition-cheon.html">전시 입장하기 →</a>
+      <a class="btn primary" href="exhibition_cheon.html">전시 입장하기 →</a>
     </div>
 
     <div class="footer">
