--- a/art4.html
+++ b/art4.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<a class="back" href="exhibition.html#4">← 전시로 돌아가기</a>
+<a class="back" href="exhibition_cheon.html#4">← 전시로 돌아가기</a>
 
 <div class="wrap">
   <img class="main" src="art4.jpg" alt="思惟">
