--- a/art9.html
+++ b/art9.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<a class="back" href="exhibition.html#9">← 전시로 돌아가기</a>
+<a class="back" href="exhibition_cheon.html#9">← 전시로 돌아가기</a>
 
 <div class="wrap">
   <img class="main" src="art9.jpg" alt="思惟">
