--- a/art11.html
+++ b/art11.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<a class="back" href="exhibition.html#11">← 전시로 돌아가기</a>
+<a class="back" href="exhibition_cheon.html#11">← 전시로 돌아가기</a>
 
 <div class="wrap">
   <img class="main" src="art11.jpg" alt="Reflection">
