--- a/art13.html
+++ b/art13.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<a class="back" href="exhibition.html#13">← 전시로 돌아가기</a>
+<a class="back" href="exhibition_cheon.html#13">← 전시로 돌아가기</a>
 
 <div class="wrap">
   <img class="main" src="art13.jpg" alt="Reflection">
