--- a/exhibition_cheon.html
+++ b/exhibition_cheon.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 
+  <a class="back home" href="index.html">← Home</a>
+
+
 <div class="gallery">
   
   <div class="counter" id="counter"></div>
@@ -231,6 +234,7 @@ document.addEventListener('DOMContentLoaded', () => {
   
 </body>
 </html>
+
 
 
 
