--- a/art1.html
+++ b/art1.html
@@ -23,11 +23,7 @@
       여기에 작품 설명 (작품 의도, 제작 배경, 재료, 전시 문맥 등)
     </p>
 
-    <h3>추가 정보</h3>
-    <ul>
-      <li>소장: 개인</li>
-      <li>작업 키워드: 빛, 시간, 도시</li>
-    </ul>
+    <p class="keywords">Keywords · 빛, 시간, 도시</p>
   </div>
 </div>
 
