--- a/art1.html
+++ b/art1.html
@@ -15,29 +15,7 @@
   <div class="meta">
     <h1>작품 제목 1</h1>
     <p class="sub">천애정 · 2024 · Oil on canvas · 100×80cm</p>
-    <div class="specs">
-
-  <div class="row">
-    <div class="label">크기</div>
-    <div class="value">71 × 63.5cm (액자 포함 84 × 76.5cm)</div>
-  </div>
-
-  <div class="row">
-    <div class="label">형태</div>
-    <div class="value">판화 / 에디션 (200)</div>
-  </div>
-
-  <div class="row">
-    <div class="label">재료</div>
-    <div class="value">실크스크린</div>
-  </div>
-
-  <div class="row">
-    <div class="label">판매가</div>
-    <div class="value">₩1,100,000</div>
-  </div>
-
-</div>
+    <p class="price">₩1,000,000</p>
 
 
 
