--- a/art2.html
+++ b/art2.html
@@ -15,7 +15,8 @@
   <div class="meta">
     <h1>작품 제목 2</h1>
     <p class="sub">작가 이름 · 2024 · Oil on canvas · 100×80cm</p>
-
+    <p class="price">₩1,000,000</p>
+    
     <h3>설명</h3>
     <p>
       여기에 작품 설명을 적어줘. (작품 의도, 제작 배경, 재료, 전시 문맥 등)
