--- a/art5.html
+++ b/art5.html
@@ -15,6 +15,7 @@
   <div class="meta">
     <h1>思惟</h1>
     <p class="sub">천애정 · 2024 · Acrylic on canvas · 24.2×33.4cm</p>
+    <p class="price">₩1,000,000</p>
 
     <h3>설명</h3>
     <p>
