--- a/art7.html
+++ b/art7.html
@@ -15,6 +15,7 @@
   <div class="meta">
     <h1>思惟</h1>
     <p class="sub">천애정 · 2024 · Oil on canvas · 100×80cm</p>
+    <p class="price">₩1,000,000</p>
 
     <h3>설명</h3>
     <p>
