--- a/art4.html
+++ b/art4.html
@@ -2,7 +2,8 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>思惟</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>작품 제목 2</title>
   <link rel="stylesheet" href="detail.css">
 </head>
 <body>
@@ -10,26 +11,34 @@
 <a class="back" href="exhibition_cheon.html#4">← 전시로 돌아가기</a>
 
 <div class="wrap">
-  <img class="main" src="art4.jpg" alt="思惟">
+  <img class="main" src="art4.jpg" alt="작품 제목 2">
 
   <div class="meta">
-    <h1>思惟</h1>
-    <p class="sub">천애정 · 2024 · Acrylic on plywood · 53x40.5cm</p>
+    <h1>작품 제목 1</h1>
+    <p class="sub">천애정 · 2024 · Oil on canvas · 100×80cm</p>
+
     <p class="price">₩1,000,000</p>
 
-    <h3>설명</h3>
-    <p>
-      여기에 작품 설명 (작품 의도, 제작 배경, 재료, 전시 문맥 등)
-    </p>
+    <div class="inquiry">
+      <p class="inquiry-title">구매 문의</p>
+      <p>Email · <a href="mailto:example@email.com">example@email.com</a></p>
+      <p>Contact · 010-1234-5678</p>
+    </div>
 
-    <p class="keywords">Keywords · 빛, 시간, 도시</p>
+    <!-- ✅ 설명/키워드는 meta 안에서 “아래쪽 섹션”으로 -->
+    <div class="description">
+      <h3>설명</h3>
+      <p>
+        여기에 작품 설명 (작품 의도, 제작 배경, 재료, 전시 문맥 등)
+      </p>
+      <p class="keywords">Keywords · 빛, 시간, 도시</p>
+    </div>
   </div>
 </div>
 
 <p class="copyright">
-    © Cheon Aejeong, 2023.  
-    Image courtesy of the artist.
+  © Cheon Aejeong, 2023. Image courtesy of the artist.
 </p>
-  
+
 </body>
 </html>
