--- a/art2.html
+++ b/art2.html
@@ -21,8 +21,8 @@
 
     <div class="inquiry">
       <p class="inquiry-title">구매 문의</p>
-      <p>Email · <a href="mailto:example@email.com">example@email.com</a></p>
-      <p>Contact · 010-1234-5678</p>
+      <p>Email · <a href="mailto:example@email.com">7636442@naver.com</a></p>
+      <p>Contact · 010-6433-9782</p>
     </div>
 
     <!-- ✅ 설명/키워드는 meta 안에서 “아래쪽 섹션”으로 -->
