--- a/art7.html
+++ b/art7.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>작품 제목 2</title>
+  <title>思惟</title>
   <link rel="stylesheet" href="detail.css">
 </head>
 <body>
@@ -11,10 +11,10 @@
 <a class="back" href="exhibition_cheon.html#7">← 전시로 돌아가기</a>
 
 <div class="wrap">
-  <img class="main" src="art7.jpg" alt="작품 제목 2">
+  <img class="main" src="art7.jpg" alt="思惟">
 
   <div class="meta">
-    <h1>작품 제목 1</h1>
+    <h1>思惟</h1>
     <p class="sub">천애정 · 2024 · Oil on canvas · 100×80cm</p>
 
     <p class="price">₩1,000,000</p>
