--- a/exhibition_cheon.html
+++ b/exhibition_cheon.html
@@ -69,7 +69,7 @@
       <img src="art6.jpg">
     </a>
     <div class="info">
-      <h2>작품 제목 3</h2>
+      <h2>思惟</h2>
       <p>천애정 · 2022</p>
     </div>
   </div>
@@ -79,7 +79,7 @@
       <img src="art7.jpg">
     </a>
     <div class="info">
-      <h2>작품 제목 3</h2>
+      <h2>思惟</h2>
       <p>천애정 · 2022</p>
     </div>
   </div>
@@ -89,7 +89,7 @@
       <img src="art8.jpg">
     </a>
     <div class="info">
-      <h2>작품 제목 3</h2>
+      <h2>思惟</h2>
       <p>천애정 · 2022</p>
     </div>
   </div>
@@ -99,7 +99,7 @@
       <img src="art9.jpg">
     </a>
     <div class="info">
-      <h2>작품 제목 3</h2>
+      <h2>思惟</h2>
       <p>천애정 · 2022</p>
     </div>
   </div>
@@ -109,7 +109,7 @@
       <img src="art10.jpg">
     </a>
     <div class="info">
-      <h2>작품 제목 3</h2>
+      <h2>Reflection</h2>
       <p>천애정 · 2022</p>
     </div>
   </div>
@@ -119,7 +119,7 @@
       <img src="art11.jpg">
     </a>
     <div class="info">
-      <h2>작품 제목 3</h2>
+      <h2>Reflection</h2>
       <p>천애정 · 2022</p>
     </div>
   </div>
@@ -129,7 +129,7 @@
       <img src="art12.jpg">
     </a>
     <div class="info">
-      <h2>작품 제목 3</h2>
+      <h2>Reflection</h2>
       <p>천애정 · 2022</p>
     </div>
   </div>
@@ -139,7 +139,7 @@
       <img src="art13.jpg">
     </a>
     <div class="info">
-      <h2>작품 제목 3</h2>
+      <h2>Reflection</h2>
       <p>천애정 · 2022</p>
     </div>
   </div>
@@ -149,7 +149,7 @@
       <img src="art14.jpg">
     </a>
     <div class="info">
-      <h2>작품 제목 3</h2>
+      <h2>Reflection</h2>
       <p>천애정 · 2022</p>
     </div>
   </div>
@@ -159,7 +159,7 @@
       <img src="art15.jpg">
     </a>
     <div class="info">
-      <h2>작품 제목 3</h2>
+      <h2>Reflection</h2>
       <p>천애정 · 2022</p>
     </div>
   </div>
@@ -234,6 +234,7 @@ document.addEventListener('DOMContentLoaded', () => {
   
 </body>
 </html>
+
 
 
 
